[package]
name = "rusty_bit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
serde = { version = "1.0.195", features = ["derive"] }
# bendy = { version = "^0.3.3", features = ["std", "serde"] }
sha1 = "0.10.6"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking"] }
urlencoding = "2.1.3"
serde_bencode = "0.2.4"
